# Weekend-Productivity-Challenge-Aide-Your-AI-Chief-of-Staff

./: .env.example  .gitignore  ARTICLE.md  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  models.py  seed.py
backend/app/agents/: __init__.py  nudges.py  supervisor.py  triage.py
backend/app/connectors/: base.py  demo.py  gmail.py
backend/app/lambdas/: nudge_handler.py
backend/app/llm/: __init__.py  base.py  bedrock.py  factory.py
backend/app/store/: __init__.py  dynamo.py  local.py
backend/tests/: conftest.py  test_flow.py
docs/: ARCHITECTURE.md  DEPLOY.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
infra/: template.yaml
